--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,6 +23,7 @@
 .center{
     height: 80%;
     width: 380px;
+    display:block;
     
    
     box-shadow: 0px 0px 15px gray;
@@ -35,8 +36,8 @@
 }
 .inner-img{
     width: 100%;
-    height: 80px;
-    position: absolute;
+    height: 20%;
+    
     display: flex;
     justify-content: center;
     
@@ -51,8 +52,9 @@
 
 .form{
    
-    width: 30%;
+    width: 80%;
     height: 80%;
+    margin: auto;
    
 }
 .footer{
@@ -108,8 +110,7 @@
 #submit{
     height:30px;
     width: 300px;
-    position: absolute;
-    left: 25px;
+    
    background-color: green;
    color: white;
    border: 0;
@@ -140,4 +141,17 @@
     position: absolute;
     top: 150px;
     color: rgb(17, 180, 36);
+}
+input {
+    box-shadow: 0px 0px 3px gray;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    padding-left: 3px;
+    width: 50%;
+    position: absolute;
+    left:140px
+}
+
+label{
+    color: rgb(75, 75, 75)
 }
