--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,7 @@
     height: 100vh;
     width: 100vw;
     margin: 0;
+    padding: 0;
    position: relative;
    justify-content: center;
    display: flex;
@@ -21,14 +22,14 @@
     background-size: cover;
 }
 .center{
-    height: 80%;
-    width: 380px;
-    display:block;
-    
+    height: 77vh;
+    width: 50%;
+
+    font-size: 3vh;
    
     box-shadow: 0px 0px 15px gray;
     position: absolute;
-    top: 50px;
+    top: 10vh;
     border-radius: 4px;
     background-color: white;
    
@@ -36,7 +37,7 @@
 }
 .inner-img{
     width: 100%;
-    height: 20%;
+    height: 30%;
     
     display: flex;
     justify-content: center;
@@ -45,27 +46,28 @@
     
 }
 .inner-img img{
-    width: 350px;
+    width: 90%;
     padding: 30px;
-    padding-bottom: 10px;
 }
 
 .form{
-   
+    position: relative;
     width: 80%;
-    height: 80%;
+    height: 70%;
     margin: auto;
+    
    
 }
 .footer{
     width: 100vw;
-    height: 45px;
+    height: 6vh;
     
-    background-color: gray;
-    opacity: 0.5;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.3;
     position: absolute;
     bottom: 0px;
     color: white;
+    font-size: 4vh;
  
 }
 .innerelem{
@@ -108,23 +110,32 @@
 
 }
 #submit{
-    height:30px;
-    width: 300px;
-    
+    margin-top: 50px;
+    height:5vh;
+    width: 100%;
+    margin: auto;
    background-color: green;
    color: white;
    border: 0;
    border-radius: 4px;
-   font-size: 18px;
+   font-size: 3vh;
    text-align: center;
    align-items: center;
+   position: absolute;
+   bottom: 10vh;
   
    
 }
 #submit:hover{
     background-color: rgb(6, 158, 6);
+    transform: scale(1.05);
     
 }
+#submit:active{
+     transition: all 0.1s ease-in-out;
+     transform: scale(0.8);
+}
+
 .links{
     width: 350px;
     display: flex;
@@ -144,12 +155,13 @@
 }
 input {
     box-shadow: 0px 0px 3px gray;
-    margin-bottom: 10px;
+    
     border-radius: 3px;
     padding-left: 3px;
     width: 50%;
-    position: absolute;
-    left:140px
+    height: 5%;
+    
+    
 }
 
 label{
